[tool.poetry]
name = "iris"
version = "1.1.1"
description = "Resilient Internet-scale measurement system."
license = "MIT"
authors = [
    "Matthieu Gouel <matthieu.gouel@lip6.fr>",
    "Maxime Mouchet <maxime.mouchet@lip6.fr>"
]
readme = "README.md"
homepage = "https://github.com/dioptra-io/iris"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet",
]

[tool.poetry.dependencies]
python = "^3.10"
aioboto3 = "^9.5.0"
aiofiles = "^0.8.0"
aioredis = "^2.0.0"
# We make alembic a runtime dependency so that is available in the Docker images.
alembic = "^1.8.1"
asgiref = "^3.5.1"
asyncpg = "^0.26.0"
diamond-miner = "^1.0.2"
dramatiq = {extras = ["redis", "watch"], version = "^1.13.0"}
email-validator = "^1.1.3"
fastapi = "^0.81.0"
fastapi-users = {extras = ["sqlalchemy", "oauth"], version = "^10.1.4"}
gunicorn = "^20.1.0"
mkdocs-material = "^8.4.2"
psutil = "^5.9.1"
psycopg2 = "^2.9.3"
pycaracal = "^0.12.0"
pych-client = {extras = ["orjson"], version = "^0.3.1"}
pydantic = "^1.8.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"
pytricia = "^1.0.2"
# Temporary entry to force SQLAlchemy <1.4.36 which breaks tests.
SQLAlchemy = "<1.4.36"
SQLAlchemy-Utils = "^0.38.3"
sqlmodel = "^0.0.6"
starlette_exporter = "^0.13.0"
tenacity = "^8.0.1"
uvicorn = "^0.18.3"
zstandard = "^0.18.0"

[tool.poetry.dev-dependencies]
black = "^22.6"
boto3-stubs = "^1.24.46"
bumpversion = "^0.6.0"
coverage = {extras = ["toml"], version = "^6.4"}
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
pre-commit = "^2.20.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
pytest-cov = "^3.0.0"
pytest-clarity = "^1.0.1"
# Required by fastapi.testclient -> starlette.testclient.
requests = "^2.28.1"
types-aiofiles = "^0.8.10"

[tool.pytest.ini_options]
addopts = "--capture=no --doctest-modules --ignore=alembic --ignore=iris_data --strict-markers --verbosity=2"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:aioboto3.*:",
    "ignore::DeprecationWarning:aiofiles.*:",
    "ignore::DeprecationWarning:aiohttp.*:",
    "ignore::DeprecationWarning:urllib3.*:",
]
markers = ["cifail"]

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
# Disabled due to fastapi_users reexports
# implicit_reexport = false
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
# warn_unreachable = true
warn_unused_ignores = true

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:$",
    "if __name__ == \"__main__\":$",
    "pass$"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
